--- a/FSC.Terminal/FSC.Terminal.csproj
+++ b/FSC.Terminal/FSC.Terminal.csproj
@@ -1,22 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net6.0;net48;net47;net46;netstandard2.0</TargetFrameworks>
-	<LangVersion>11.0</LangVersion>
+    <TargetFrameworks>net8.0;net7.0;net6.0;net48;net47;net46;netstandard2.0</TargetFrameworks>
+	<LangVersion>12.0</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <Title>FSC-Terminal</Title>
     <Company>Fabian Schlüter</Company>
     <Authors>Fabian Schlüter</Authors>
-	<Version>1.2.0</Version>
+	<Version>1.3.0</Version>
     <Description>FSC.Terminal works like the Console class and contains the same or similar methods and properties. It also contains some extra features like password inputs</Description>
     <Copyright>Copyright 2023 by Fabian Schlüter</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/Fabian2000/FSC.Terminal</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Fabian2000/FSC.Terminal.git</RepositoryUrl>
     <PackageTags>Console, CMD, Terminal, Bash, Shell, Commandline, FSC</PackageTags>
-    <PackageReleaseNotes>Added ReadLicense to give the user the possibility to enter a formatted license string</PackageReleaseNotes>
+    <PackageReleaseNotes>Added WritePicture to display a picture on the console as ASCII art. Added the possibility to set the title on other platforms than windows.</PackageReleaseNotes>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <IncludeSymbols>False</IncludeSymbols>
     <PackageIcon>icon.png</PackageIcon>
@@ -36,6 +36,11 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="2.88.6" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.6" />
   </ItemGroup>
 
 </Project>
